--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Ciaran Walsh</h1>
 
-  <img src="https://i2-prod.glasgowlive.co.uk/incoming/article13101427.ece/ALTERNATES/s810/GD1349517.jpg" alt="Henrik">
+  <img src="mypicture.png" alt="Henrik">
 
   <p>Hello this is a really short paragraph about myself.</p>
   <p>I like golfing,reading, and listening to music.</p>
